<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/imageDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="6dp"/>

    <TextView
        android:id="@+id/textDialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_toRightOf="@+id/imageDialog"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:id="@+id/inactive_text"
        android:text="@string/inactive_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        android:layout_toRightOf="@id/imageDialog"
        android:layout_below="@id/textDialog" />
    <Switch
        android:id="@+id/active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/inactive_text"
        android:layout_below="@id/textDialog"/>
    <TextView
        android:id="@+id/active_text"
        android:text="@string/active_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        android:layout_toRightOf="@id/active"
        android:layout_below="@id/textDialog" />

    <TextView
        android:id="@+id/temperature_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageDialog"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:text="@string/temperature" />
    <TextView
        android:id="@+id/temperature_status_text"
        android:layout_below="@id/temperature_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_temperature"
        android:layout_marginLeft="10dp"/>


    <SeekBar
        android:id="@+id/temperature"
        android:max="@string/span_heating"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:minWidth="180dp"
        android:maxWidth="180dp"
        android:layout_toRightOf="@+id/temperature_status_text"
        android:layout_below="@id/active"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteButton"
        android:layout_below="@+id/temperature"
        />
    <Button
        android:id="@+id/okayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okayButton"
        android:layout_below="@+id/temperature"
        android:layout_toRightOf="@id/deleteButton"
        />
    <Button
        android:id="@+id/aboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutButton"
        android:layout_below="@+id/temperature"
        android:layout_toRightOf="@id/okayButton"
        />

</RelativeLayout>